# OpenMDM

./: README.md  pylint_report.txt  pyproject.toml  source.db  sqlfluff_report.txt
.github/workflows/: pylint-code-check.yml
archive/: config_mdm copy.yml  mdm_dynamic copy.py  mdm_operations_sqlite.py  new copy.py
database/: dbt_etl_dev.db  dbt_etl_dev_models.db  main_dbt.db
documentation/: README.md
mdm/dbt_store_cleanup/: dbt_project.yml  packages.yml
mdm/file_to_db/: check_dbt_etl_dev_models.py  check_src_dbt_etl_dev.py  csv_to_sqlite.py
mdm/ingestion/: main.py
mdm/matching_identity/: config_mdm.yml  config_mdm23.yml  config_mdm29.yml  identity_resoltn_matching.py  identity_resoltn_matching2.py  identity_resoltn_matching3.py  mdm_dynamic.py  mdm_operations.py  mdm_operations_sqlite.py  new.py  new23.py  new29.py
mdm/output/: detail_summary_2025-07-21_22_46_12.txt  detail_summary_2025-07-21_22_53_27.txt  detail_summary_2025-07-28_09_07_00.txt  detail_summary_2025-07-29_14_54_00.txt  detail_summary_2025-07-29_15_07_19.txt  golden_records_2025-07-21_22_46_12.txt  golden_records_2025-07-21_22_53_27.txt  golden_records_2025-07-21_22_57_44.txt  golden_records_2025-07-28_09_07_00.txt  golden_records_2025-07-29_14_54_00.txt  golden_records_2025-07-29_15_07_19.txt  golden_records_2025-07-30_19_50_11.txt
mdm/source_data/: Data_Set_1.csv  Data_Set_1_FULL.csv  Data_Set_2.csv  Data_Set_2_20_Unique.csv  Data_Set_2_20_modified.csv  Data_Set_2_80_Unique.csv  Data_Set_3_LOAD1.csv  Data_Set_3_LOAD2.csv  golden_auto_records.csv  mdm_similarity_summary.txt  old.txt
(+3 files in other folders)
